tests/fixtures/fail/try_in_global.sc
let answer = Option(i32).Some(42).try

let main(): i32 = answer
